src/css/index.css
/* -- Global -- */

*,
::before,
::after {
    box-sizing: border-box;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

:root {
    --main-text-black: #111111;
    --main-bg-blue: rgb(0, 132, 209);
    --hero-yellow: #FFFEE1;
    --display-font-family: 'Passion One', sans-serif;
    --display-shadow: -2px 2px 2px rgba(0, 0, 0, 0.5);
    /* Scale font size for any screen size. https://css-tricks.com/books/volume-i/scale-typography-screen-size/*/
    /* font-size: calc([minimum size] + ([maximum size] - [minimum size]) * ((100vw - [minimum viewport width]) / ([maximum viewport width] - [minimum viewport width]))); */
    font-size: calc(24px + (32 - 24) * ((100vw - 300px) / (1600 - 300)));
    line-height: calc(1.3em + (1.5 - 1.2) * ((100vw - 300px)/(1600 - 300)));
}

body {
    margin: 0;
    color: white;
    font-family: sans-serif;
}

h1 {
    font-family: var(--display-font-family);
    text-shadow: var(--display-shadow);
}

button {
    border-radius: 0.25rem;
    padding: 0.5rem 1rem;
    font-size: 0.75rem;
    cursor: pointer;
}

/* -- Header -- */

header {
    position: absolute;
    /* background-color: var(--main-bg-blue); */
    /* https://www.heropatterns.com/ charlie brown pattern */
    /* background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='12' viewBox='0 0 20 12'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='charlie-brown' fill='%23d2f0ff' fill-opacity='0.36'%3E%3Cpath d='M9.8 12L0 2.2V.8l10 10 10-10v1.4L10.2 12h-.4zm-4 0L0 6.2V4.8L7.2 12H5.8zm8.4 0L20 6.2V4.8L12.8 12h1.4zM9.8 0l.2.2.2-.2h-.4zm-4 0L10 4.2 14.2 0h-1.4L10 2.8 7.2 0H5.8z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E"); */
    top: 0.75rem;
    left: 1rem;
    color: white;
    z-index: 3;
}

header h1 {
    margin: 0;
    margin-right: 0.5rem;
    font-size: 1.5rem;
}

header .brand,
header h1,
header nav {
    display: inline-block;
}


header .brand {
    margin-right: 1rem;
    margin-bottom: 0.5rem;
}

header .brand__logo {
    /* font-size: calc([minimum size] + ([maximum size] - [minimum size]) * ((100vw - [minimum viewport width]) / ([maximum viewport width] - [minimum viewport width]))); */
    width: calc(100px + (150 - 100) * ((100vw - 300px) / (1600 - 300)));
    display: inline-block;
    vertical-align: bottom;
    filter: drop-shadow(var(--display-shadow));
}

header nav>ul {
    list-style: none;
    padding: 0;
    margin: 0;
}

header nav li {
    display: inline-block;
    margin-right: 0;
    font-family: var(--display-font-family);
    text-shadow: var(--display-shadow);
}

header nav li+li::before {
    /* content: ' / ' */
}

header nav a {
    color: inherit;
    text-decoration: none;
    text-transform: lowercase;
}

header nav a:hover {
    text-decoration: underline;
}

header nav a:active {
    color: var(--hero-yellow);
}

header nav .current {
    color: var(--hero-yellow);
    text-transform: uppercase;
}

/* -- Hero -- */

.hero {
    position: relative;
    z-index: 1;
    display: flex;
    align-items: center;
    justify-content: center;
    min-height: 100vh;
    padding-right: 1rem;
    padding-left: 1rem;
    padding-top: 5rem;
    padding-bottom: 1rem;
    background-color: var(--main-bg-blue);
    /* https://www.heropatterns.com/ charlie brown pattern */
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='12' viewBox='0 0 20 12'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='charlie-brown' fill='%23d2f0ff' fill-opacity='0.36'%3E%3Cpath d='M9.8 12L0 2.2V.8l10 10 10-10v1.4L10.2 12h-.4zm-4 0L0 6.2V4.8L7.2 12H5.8zm8.4 0L20 6.2V4.8L12.8 12h1.4zM9.8 0l.2.2.2-.2h-.4zm-4 0L10 4.2 14.2 0h-1.4L10 2.8 7.2 0H5.8z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
}

.hero__content {
    max-width: 35rem;
    z-index: 2;
}

.hero h2 {
    font-size: 2.4rem;
    line-height: 2.4rem;
    color: var(--hero-yellow);
    font-family: var(--display-font-family);
    text-shadow: var(--display-shadow);
    margin: 0;
    margin-bottom: 0.3rem;
}

.hero p {
    font-size: 1.4rem;
    font-family: var(--display-font-family);
    text-shadow: var(--display-shadow);
    line-height: 1.4rem;
    color: white;
    margin: 0;
    margin-bottom: 1.5rem;

}

.hero button {
    margin-right: 0.5rem;
    margin-bottom: 0.5rem;
    font-family: var(--display-font-family);
    /* text-shadow: var(--display-shadow); */
    /* box-shadow: var(--display-shadow), inset var(--display-shadow); */
    box-shadow: var(--display-shadow);
    background: white;
    border: 2px solid white;
    color: var(--main-text-black);
}

.hero .button--primary {
    background: var(--hero-yellow);
    color: var(--main-text-black);
    text-shadow: none;
    box-shadow: var(--display-shadow);
}

.hero__bg {
    position: absolute;
    bottom: 1rem;
    right: 1rem;
}

.hero__bg img {
    /* calc([minimum size] + ([maximum size] - [minimum size]) * ((100vw - [minimum viewport width]) / ([maximum viewport width] - [minimum viewport width]))); */
    width: calc(150px + (500 - 150) * ((100vw - 300px) / (1600 - 300)));
    max-width: 500px;
}

/* -- Mobile -- */

@media screen and (max-width: 650px) {
    .hero {
        padding-top: 7rem;
    }

    .hero__bg img {
        display: none;
    }
}

